Fixed body text spacing

--- a/src/3-general/_body-text.scss
+++ b/src/3-general/_body-text.scss
@@ -28,11 +28,13 @@
 // Styleguide: General.BodyText.Excerpt
 
 p {
-  margin: 0 0 ($line-height-computed / 2);
+  margin: 0 0 $line-height-computed;
+  line-height: 1.5em;
 }
 
 .lead {
-  margin-bottom: $line-height-computed;
+  margin-top: 1.42em;
+  margin-bottom: 2.4em;
   font-size: floor(($font-size-base * 1.15));
   font-weight: 400;
   line-height: 1.45;
